--- a/po/wesnoth-utbs/en_GB.po
+++ b/po/wesnoth-utbs/en_GB.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: 2018-07-14 14:48+1000\n"
+"PO-Revision-Date: 2019-02-13 16:55+1100\n"
 "Last-Translator: Wedge009 <wedge009@wedge009.net>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.9\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Under_the_Burning_Suns
 #. [editor_group]: id=utbs
@@ -1680,8 +1680,8 @@ msgid ""
 "The undead are defeated, but we lost her in the fight as well. Darn, if only "
 "we could have saved her."
 msgstr ""
-"The undead are defeated, but we lost her in the fight as well. Damn, if only "
-"we could have saved her!"
+"The undead are defeated, but we lost her in the fight as well. Darn, if only "
+"we could have saved her."
 
 #. [unit]: type=Wraith, id=Vengeful Lord
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1240
@@ -2142,7 +2142,7 @@ msgstr "Grak"
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:364
 msgid "Kaleh, wake up! Sentries report movement in the sands!"
-msgstr "Kaleh, wake up! Sentries report movement in the sands."
+msgstr "Kaleh, wake up! Sentries report movement in the sands!"
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:368
@@ -3429,15 +3429,6 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:819
-#, fuzzy
-#| msgid ""
-#| "How odd. Someone has carved a crude fountain out of the stone at the end "
-#| "of the passage. The freezing water pours out into a large pool. At the "
-#| "bottom of the pool I can see a skeleton still gripping a sword. The blade "
-#| "seems to glow faintly blue. The pool isn’t very deep, I could easily wade "
-#| "in and pick it up. But someone else has carved a crude message in the "
-#| "wall. <i>“If you dare to take this blade here, your greatest fear will "
-#| "surely appear.’</i> It looks like a nice sword, but do I dare chance it?"
 msgid ""
 "How odd. Someone has carved a crude fountain out of the stone at the end of "
 "the passage. The freezing water pours out into a large pool. At the bottom "
@@ -6485,7 +6476,7 @@ msgid ""
 msgstr ""
 "And now I think you should be off as soon as possible. The trolls have "
 "retreated into their holes for the present, but who knows when they will "
-"strike again?"
+"strike again."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/07a_Dealing_with_Dwarves.cfg:560
@@ -6534,8 +6525,8 @@ msgid ""
 "will strike again."
 msgstr ""
 "And now I think you should be off as soon as possible. The trolls have "
-"retreated into their holes for the present, but who knows when they will "
-"strike again?"
+"retreated back into their holes for the present, but who knows when they "
+"will strike again."
 
 #. [option]
 #: data/campaigns/Under_the_Burning_Suns/scenarios/07a_Dealing_with_Dwarves.cfg:652
