updated Scottish Gaelic translaiton

--- a/po/wesnoth-tb/gd.po
+++ b/po/wesnoth-tb/gd.po
@@ -1,12 +1,13 @@
 # Translators:
-# GunChleoc, 2017
+# GunChleoc, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2018-03-17 18:31 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: GunChleoc, 2017\n"
+"PO-Revision-Date: 2017-05-31 13:44+0000\n"
+"Last-Translator: GunChleoc, 2018\n"
 "Language-Team: Gaelic, Scottish (https://www.transifex.com/gunchleoc/"
 "teams/12769/gd/)\n"
 "Language: gd\n"
@@ -61,8 +62,10 @@ msgstr ""
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:23
+#, fuzzy
+#| msgid "(Rookie level, 4 scenarios.)"
 msgid "(Novice level, 4 scenarios.)"
-msgstr "(Ìre fhoghlamaiche, 4 cnàmh-sgeulan.)"
+msgstr "(Ìre glas-laoich, 4 cnàmh-sgeulan.)"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:30
@@ -1702,3 +1705,6 @@ msgstr "Baran"
 #: data/campaigns/Two_Brothers/utils/macros.cfg:4
 msgid "Hint:"
 msgstr "Gliocas:"
+
+#~ msgid "It may be important, I best take it."
+#~ msgstr "Dh’fhaoidte gu bheil e cudromach; b’ fheàirrde mi a togail."
