--- a/po/wesnoth-tutorial/gd.po
+++ b/po/wesnoth-tutorial/gd.po
@@ -1,12 +1,13 @@
 # Translators:
-# GunChleoc, 2017
+# GunChleoc, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:30 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: GunChleoc, 2017\n"
+"PO-Revision-Date: 2017-05-31 13:44+0000\n"
+"Last-Translator: GunChleoc, 2018\n"
 "Language-Team: Gaelic, Scottish (https://www.transifex.com/gunchleoc/"
 "teams/12769/gd/)\n"
 "Language: gd\n"
@@ -148,6 +149,8 @@ msgstr "Briog air Li’sar"
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:316
 msgid "To undo your last move, press <b>u</b> or use the right-click menu."
 msgstr ""
+"Airson do ghluasad mu dheireadh a neo-dhèanamh, brùth air <b>u</b> no dèan "
+"briogadh deas airson clàr-taice."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/01_Tutorial_part_1.cfg:357
@@ -1843,25 +1846,22 @@ msgstr ""
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:896
-#, fuzzy
-#| msgid ""
-#| "You are close to killing their leader! The unit who finishes him will "
-#| "gain 16 experience points because he is second level. Choose your "
-#| "attacking unit carefully!"
 msgid ""
 "You are close to killing their leader! Because he is second level, the unit "
 "who finishes him will gain 16 experience points. In a campaign, it’s "
 "important to decide which units you want to advance, and give those units "
 "the best chances to gain experience."
 msgstr ""
-"Tha an ceannard aca cha mhòr marbh! Gheibh an t-aonad a chuireas às dha 16 "
-"puingean-eòlais oir tha e air an dàrna rang. Tagh an t-aonad a bheir "
-"ionnsaigh air gu cùramach!"
+"Tha an ceannard aca cha mhòr marbh! On a tha e air an dàrna rang, gheibh an "
+"t-aonad a chuireas às dha 16 puingean-eòlais. Ann an iomairt, tha e "
+"cudromach gun cuir thu romhad cò na h-aonadan a tha thu airson àrdachadh "
+"agus gun doir thu an cothrom nas fhearr dha na h-aonadan sin gum buain iad "
+"eòlas."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:900
 msgid "You have almost finished the tutorial"
-msgstr ""
+msgstr "Cha mhòr nach do choilean thu an t-oideachadh"
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:902
@@ -1869,6 +1869,9 @@ msgid ""
 "In a campaign you may have ten or even twenty scenarios to build your army, "
 "but this tutorial will conclude after you defeat Thrag."
 msgstr ""
+"Ann an iomairt, bith deich no ’s dòcha fichead cnàmh-sgeul ann fiù far an "
+"tog thu d’ arm ach thig crìoch air an oideachadh seo nuair a chuireas tu "
+"ruaig air Trag."
 
 #. [message]: speaker=Galdrad
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:928
@@ -2080,6 +2083,13 @@ msgid ""
 "Incursion</i> you have an Elvish army, similarly to this tutorial, but with "
 "seven scenarios for your units to gain experience and advance levels."
 msgstr ""
+"Chaidh an latha leat an aghaidh nan deamhan! ’S dòcha gum feuch thu tè dhe "
+"na h-iomairtean air ìre glas-laoich a-nis anns am faigh thu gliocasan mun ro-"
+"innleachd. Is <i>Sgeulachd dithis bhràithrean</i> an tè as fhasa agus "
+"mholamaid gun toisich thu leatha-se. Ann am <i>Foghail nan deamhan</i>, bidh "
+"feachd-sìthe agad coltach ris an oideachadh seo ach bidh seachd cnàmh-"
+"sgeulan ann ach am buannaich na h-aonadan agad eòlas ach an àrdaich iad gu "
+"rangan ùra."
 
 #. [message]: speaker=narrator
 #: data/campaigns/tutorial/scenarios/02_Tutorial_part_2.cfg:1176
@@ -2087,6 +2097,8 @@ msgid ""
 "You can also refer to the in-game help browser if you ever need to refresh "
 "your memory on gameplay mechanics."
 msgstr ""
+"’S urrainn dhut sùil a thoirt air a’ chobhair am broinn a’ gheama cuideachd "
+"ma dh’fheumas tu riaghailtean a’ gheama ath-sgrùdadh."
 
 #. [unit_type]: id=Fighter, race=human
 #: data/campaigns/tutorial/units/Fighter.cfg:4
@@ -2147,18 +2159,3 @@ msgstr ""
 "\n"
 "<big>Briog air an luchag no brùth air an spacebar gus leantainn air adhart..."
 "</big>"
-
-#~ msgid ""
-#~ "You have beaten the orcs! You may want to try one of the novice-level "
-#~ "campaigns next, such as <i>A Tale of Two Brothers</i>, <i>An Orcish "
-#~ "Incursion</i>, or <i>The South Guard</i>. Konrad, Li’sar and Delfador are "
-#~ "characters from <i>Heir to the Throne</i>. You can also refer to the in-"
-#~ "game help browser if you ever need to refresh your memory on gameplay "
-#~ "mechanics."
-#~ msgstr ""
-#~ "Rinn thu a’ chùis air na deamhain! ’S dòcha gu bheil thu airson iomairt "
-#~ "air ìre fhoghlamaiche fheuchainn a-nis a leithid: <i>Sgeulachd dithis "
-#~ "bhràithrean</i>, <i>Foghail nan deamhan</i> no <i>An geàrd deasach</i>. "
-#~ "’S e pearsachan bho <i>Oighre na cathrach</i> a th’ ann an Conall, Li’sar "
-#~ "agus Deilfeadar. ’S urrainn dhut sùil a thoirt air a’ chobhair am broinn "
-#~ "a’ gheama cuideachd ma dh’fheumas tu riaghailtean a’ gheama ath-sgrùdadh."
