--- a/po/wesnoth-aoi/gd.po
+++ b/po/wesnoth-aoi/gd.po
@@ -1,12 +1,13 @@
 # Translators:
-# GunChleoc, 2017
+# GunChleoc, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 18:29 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: GunChleoc, 2017\n"
+"PO-Revision-Date: 2017-05-31 13:43+0000\n"
+"Last-Translator: GunChleoc, 2018\n"
 "Language-Team: Gaelic, Scottish (https://www.transifex.com/gunchleoc/"
 "teams/12769/gd/)\n"
 "Language: gd\n"
@@ -39,10 +40,8 @@ msgstr ""
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:20
-#, fuzzy
-#| msgid "(Novice level, 7 scenarios.)"
 msgid "(Rookie level, 7 scenarios.)"
-msgstr "(Ìre fhoghlamaiche, 7 cnàmh-sgeulan.)"
+msgstr "(Ìre glas-laoich, 7 cnàmh-sgeulan.)"
 
 #. [campaign]: id=An_Orcish_Incursion
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:22
@@ -299,6 +298,9 @@ msgid ""
 "me that they are safe, but if we should embark on a campaign then we will "
 "surely need them alongside us in the battles ahead."
 msgstr ""
+"A thighearna, chan eil eòlas a’ bhlàr air gin dhe na lighichean againn. Tha "
+"mi toilichte gu bheil iad slàn sàbhailte ach ma tha sinn airson iomairt, bi "
+"feum againn orra san t-sabaid a bhios romhainn gun teagamh."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:214
@@ -307,6 +309,9 @@ msgid ""
 "pleases me that they are safe, but if we should embark on a campaign then we "
 "will surely need them alongside us in the battles ahead."
 msgstr ""
+"A thighearna, chan eil eòlas a’ bhlàr air gin dhe na lighichean againn. Tha "
+"mi toilichte gu bheil iad slàn sàbhailte ach ma tha sinn airson iomairt, bi "
+"feum againn orra san t-sabaid a bhios romhainn gun teagamh."
 
 #. [message]: race=elf
 #. the player has recruited some Shamans but has lost all them (or managed to level a Sorceress)
@@ -317,6 +322,10 @@ msgid ""
 "on a campaign then we will surely need them alongside us in the battles "
 "ahead."
 msgstr ""
+"A thighearna, chan eil eòlas a’ bhlàr air gin dhe na lighichean a mhair beò "
+"againn. Chan eil e ’na thlachd dhomh a bhith a’ moladh gun cuir sinn gin "
+"eile dhiubh fo chunnart ach ma tha sinn airson iomairt, bi feum againn orra "
+"san t-sabaid a bhios romhainn gun teagamh."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:229
@@ -326,6 +335,10 @@ msgid ""
 "should embark on a campaign then we will surely need them alongside us in "
 "the battles ahead."
 msgstr ""
+"A thighearna, chan eil eòlas a’ bhlàr air gin dhe na lighichean a mhair beò "
+"againn. Chan eil e ’na thlachd dhomh a bhith a’ moladh gun cuir sinn gin "
+"eile dhiubh fo chunnart ach ma tha sinn airson iomairt, bi feum againn orra "
+"san t-sabaid a bhios romhainn gun teagamh."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:244
