--- a/po/wesnoth-tb/gd.po
+++ b/po/wesnoth-tb/gd.po
@@ -1,12 +1,13 @@
 # Translators:
-# GunChleoc, 2017
+# GunChleoc, 2018
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-27 09:23 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: GunChleoc, 2017\n"
+"PO-Revision-Date: 2017-05-31 13:44+0000\n"
+"Last-Translator: GunChleoc, 2018\n"
 "Language-Team: Gaelic, Scottish (https://www.transifex.com/gunchleoc/"
 "teams/12769/gd/)\n"
 "Language: gd\n"
@@ -61,10 +62,8 @@ msgstr ""
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:23
-#, fuzzy
-#| msgid "(Novice level, 4 scenarios.)"
 msgid "(Rookie level, 4 scenarios.)"
-msgstr "(Ìre fhoghlamaiche, 4 cnàmh-sgeulan.)"
+msgstr "(Ìre glas-laoich, 4 cnàmh-sgeulan.)"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:30
@@ -1235,7 +1234,7 @@ msgstr ""
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:717
 msgid "It may be important, I best take it."
-msgstr ""
+msgstr "Dh’fhaoidte gu bheil e cudromach; b’ fheàirrde mi a togail."
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:737
