updated Italian translation

--- a/po/wesnoth-manual/it.po
+++ b/po/wesnoth-manual/it.po
@@ -5,12 +5,12 @@
 #
 # Automatically generated, 2007.
 # Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008.
-# Antonio Rosella <arosella@yahoo.com> 2012-2018.
+# Antonio Rosella <arosella@yahoo.com> 2012-2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "POT-Creation-Date: 2018-02-12 20:02+0300\n"
-"PO-Revision-Date: 2018-10-05 03:35-0700\n"
+"PO-Revision-Date: 2019-02-09 11:47+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 
 # type: Attribute 'lang' of: <book>
 #. type: Attribute 'lang' of: <book>
@@ -273,7 +273,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/main-menu-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/main-menu-1.14.5+dev.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/it/main-menu-1.12.4.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><simpara><inlinemediaobject><textobject><phrase>
@@ -702,8 +702,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/multiplayer-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/multiplayer-1.14.5+dev.jpg\"/> "
-"</imageobject>"
+"<imageobject> <imagedata fileref=\"images/it/multiplayer-1.12.4.jpg\"/> </"
+"imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
 #: doc/manual/manual.en.xml:317
@@ -899,8 +899,8 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/game-screen-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/game-screen-1.14.5+dev.jpg\"/> "
-"</imageobject>"
+"<imageobject> <imagedata fileref=\"images/it/game-screen-1.12.4.jpg\"/> </"
+"imageobject>"
 
 # type: Content of: <book><chapter><section><section><title>
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -935,7 +935,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/top_pane-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/top_pane-1.14.5+dev.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/it/top_pane-1.12.4.jpg\"/> </"
 "imageobject>"
 
 #. type: Content of: <book><chapter><section><section><simpara><inlinemediaobject><textobject><phrase>
@@ -1017,7 +1017,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/right_pane-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/right_pane-1.14.5+dev.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/it/right_pane-1.12.4.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -2022,7 +2022,8 @@ msgstr ":"
 msgid ""
 "<ulink url=\"https://www.wesnoth.org/wiki/CommandMode\">Command mode</ulink>"
 msgstr ""
-"<ulink url=\"https://wiki.wesnoth.org/CommandMode\">Modalità comandi</ulink>"
+"<ulink url=\"https://www.wesnoth.org/wiki/CommandMode\">Modalità comandi</"
+"ulink>"
 
 # type: Content of: <book><chapter><section><section><table><tgroup><tbody><row><entry>
 #. type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -2184,7 +2185,7 @@ msgid ""
 "<imageobject> <imagedata fileref=\"images/recruit-1.11.9.jpg\"/> </"
 "imageobject>"
 msgstr ""
-"<imageobject> <imagedata fileref=\"images/it/recruit-1.14.5+dev.jpg\"/> </"
+"<imageobject> <imagedata fileref=\"images/it/recruit-1.12.4.jpg\"/> </"
 "imageobject>"
 
 # type: Content of: <book><chapter><section><table><tgroup><tbody><row><entry>
@@ -2933,10 +2934,9 @@ msgid ""
 "Units with the Feral trait only receive 50% defense in villages regardless "
 "of the base terrain the village is on."
 msgstr ""
-"Le unità con caratteristica Selvaggio ricevono soltanto il 50% del bonus "
-"difensivo quando vengono posizionate in un villaggio, qualunque sia la "
-"natura del terreno sul quale il villaggio stesso è edificato (Pipistrelli, "
-"Falchi)."
+"Le unità selvagge ricevono soltanto il 50% del bonus difensivo quando "
+"vengono posizionate in un villaggio, qualunque sia la natura del terreno sul "
+"quale il villaggio stesso è edificato (Pipistrelli, Falchi)."
 
 #. type: Content of: <book><chapter><section><section><variablelist><varlistentry><term>
 #: doc/manual/manual.en.xml:1767
